Change website for our new pelican based website
In comparison to the old PR, which was highliy oudated and would be a
hell of a merge conflict, this also uses a python virtual env for the
pelican python stuff.

--- a/templates/nginx/website.conf.j2
+++ b/templates/nginx/website.conf.j2
@@ -7,7 +7,7 @@ server {
     index index.html index.htm;
 
     location / {
-        root   /var/www/website;
+        root   {{ website_basedir }}/public;
     }
 
     location ^~/.well-known/ {
