--- a/templates/nginx/web/website.conf.j2
+++ b/templates/nginx/web/website.conf.j2
@@ -7,7 +7,7 @@ server {
     index index.html index.htm;
 
     location / {
-        root   /var/www/website;
+        root   {{ website_path }}/public;
     }
 
     location ^~/.well-known/ {
